# kafka_chat

./: README.md  pyproject.toml
src/kafka_chat/kafka/: aws_chat.py  cchat.py  consumer.py  pchat.py  producer.py
